--- a/Views/Individual/Individual.cshtml
+++ b/Views/Individual/Individual.cshtml
@@ -761,66 +761,48 @@
                             data: { pruta: Ruta, conteo: conteoParcial},
                             success:
                                 function (response) {
-                                    var cadena = response.split(",");
-                                    if (cadena == "") {
-                                        document.getElementById("toca").value = cadena[0];
-                                    }
-                                    if (cadena[0] == "Turno") {
-                                        var ultimo = listaIngreso.length - 1;
-                                        if (document.getElementById(listaIngreso[ultimo]).style.backgroundColor == "white") {
-                                            contador = 1;
-                                        }
-                                        if (contador % 2 == 0) {
-                                            blanco = jug1;
-                                            document.getElementById("toca").value = "hola";
-                                        }
-                                        else {
-                                            negro = jug1;
-                                            document.getElementById("toca").value = negro;
-                                        }
-                                        var xy = listaIngreso[ultimo].split("");
-                                        var color = document.getElementById(listaIngreso[ultimo]).style.backgroundColor;
-                                        if (color == "white" || color == "White") {
-                                            contador = 1;
-                                        }
-                                        //movimientos(xy[0], xy[1]);
-                                        //document.getElementById("Ruta").value = "";
-                                        //document.getElementById("Ruta").style.display = "none";
-                                        //document.getElementById("Mostrar").style.display = "none";
-                                    }
-                                    else {
-                                        if (cadena[0] == "blanco") {
-                                            var xy = cadena[1].split("");
-                                            color = "white";
-                                            contadorBlancas++;
-                                        }
-                                        else {
-                                            var xy = cadena[1].split("");
-                                            color = "black";
-                                            contadorNegras++;
-                                        }
-                                        document.getElementById(cadena[1]).style.backgroundColor = color;
-                                        deshabilitar(cadena[1]);
-                                        listaIngreso.forEach(function (i) {
-                                            if (i == cadena[1]) {
-                                                movimientos(xy[0], xy[1]);
-                                                document.getElementById("Ruta").style.display = "none";
-                                                document.getElementById("Mostrar").style.display = "none";
-                                                if (contadorcito == 0) {
-                                                    alert("Presione \"Aceptar\" para empezar a jugar.");
-                                                    contadorcito++;
-                                                }
+                                    var respuesta = response.split("&");
+                                    respuesta.forEach(function (i) {
+                                        var cadena = i.split(",");
+                                        if (cadena[0] == "Turno") {
+                                            var ultimo = respuesta.length - 2;
+                                            var ultima = respuesta[ultimo].split(",");
+                                            if (ultima[1] == "white") contador = 1;
+                                            if (contador % 2 == 0) {
+                                                blanco = jug1;
+                                                document.getElementById("toca").value = "hola";
                                             }
-                                        });
-                                        listaIngreso.push(cadena[1]);
-                                        movimientosCarga(xy[0], xy[1]);
-                                    }
-                                },
+                                            else {
+                                                negro = jug1;
+                                                document.getElementById("toca").value = negro;
+                                            }
+                                            var xy = ultima[1].split("");
+                                            movimientos(xy[0], xy[1]);
+                                        }
+                                        else {
+                                            if (cadena[0] == "blanco") {
+                                                var xy = cadena[1].split("");
+                                                color = "white";
+                                                contadorBlancas++;
+                                            }
+                                            else {
+                                                var xy = cadena[1].split("");
+                                                color = "black";
+                                                contadorNegras++;
+                                            }
+                                            document.getElementById(cadena[1]).style.backgroundColor = color;
+                                        }
+                                        deshabilitar(cadena[1]);
+                                    });
+
+                                    },
                             error:
                                 function (response) {
                                     alert("Error: " + response);
                                 }
                         });
+                document.getElementById("Ruta").style.display = "none";
+                document.getElementById("Mostrar").style.display = "none";
             });
         </script>
         <script>
